[tool.poetry]
name = "test_work"
version = "0.1.0"
description = ""
authors = ["netro <hewi@git.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
passlib = "^1.7.4"
PyJWT = "^2.3.0"
redis = "^4.2.0"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
