[tool.poetry]
name = "test_work"
version = "0.1.0"
description = ""
authors = ["netro <hewi@git.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.139.0"
requests = "^2.34.2"
uvicorn = "^0.51.0"
passlib = "^1.7.4"
PyJWT = "^2.13.0"
redis = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pip-audit (>=2.10.1,<3.0.0)",
    "httpx2 (>=2.5.0,<3.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["app"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=93"
